# cpp_accountManager

./: CMakeLists.txt
src/: '  MainLoop.hpp  WindowDisplay.hpp  main.cpp  utils.cpp  utils.hpp
src/UI/: UI.cpp
src/UI/components/: Box.cpp  Button.cpp  Container.cpp  HBox.cpp  VBox.cpp
src/include/: Auth.hpp  Box.hpp  Button.hpp  Container.hpp  Enums.hpp  HBox.hpp  InputSystem.hpp  MainLoop.hpp  Renderer.hpp  Scene.hpp  SceneInit.hpp  SceneSystem.hpp  Types.hpp  UI.hpp  UILayoutSystem.hpp  UISystem.hpp  VBox.hpp  WindowDisplay.hpp
src/init/: MainLoop.cpp  Renderer.cpp  SceneInit.cpp  WindowDisplay.cpp
src/layouts/: AuthLayout.yaml
src/scenes/: Auth.cpp  Scene.cpp
src/system/: InputSystem.cpp  SceneSystem.cpp  UILayoutSystem.cpp  UISystem.cpp
src/system/UI/: UISystem.cpp
src/system/UI/components/: Box.cpp
